--- a/Contacto.html
+++ b/Contacto.html
@@ -4,14 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-
-
-
+        <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                        <a class="navbar-brand" href="index.html">TecnoPc</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="navbar-collapse collapse " id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                            <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="#">F.A.Q</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="Contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="#">Catálogo </a>
+                            </li>
+                            </ul>
+                            <ul class="navbar-nav">
+                            <li class="nav-item">
+                            <a class="nav-link" href="login-clientes.html">Ingresar</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="#">Registrarse</a>
+                            </li>
+                        </ul>
+                        </div>
+                    </nav>
+        </div>
     <section class="container">
     <div class="row cliente-contacto">
         <div class="col-6 ">
