cambio-enlace-registro

--- a/registro.html
+++ b/registro.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="login-clientes.html">Ingresar</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Registrarse</a>
+                    <a class="nav-link" href="registro.html">Registrarse</a>
                     </li>
                 </ul>
                 </div>
