--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="Contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Catálogo </a>
+                            <a class="nav-link" href="./index.html #acord">Catálogo </a>
                             </li>
                             </ul>
                             <ul class="navbar-nav">
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                             <a class="nav-link" href="registro.html">Registrarse</a>
                             </li>
+                            <li class="nav-item">
+                                    <a class="nav-link" href="perfil-usuario.html">Perfil</a>
+                                    </li>
                         </ul>
                         </div>
                     </nav>
@@ -217,7 +220,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <a href="">
+                            <a href="Producto-detallado.html">
                                 <div class="producto_destacado">
                                     <img src="./images/accesorios-pc.jpg" alt="combo" width="30%">
                                     <div class="cont_texto_des">
@@ -233,7 +236,7 @@
                     <!--Productos-->
                     <div class="row">
                         <div class="col-md-12 catalogo">
-                            <a href="" class="box">
+                            <a href="Producto-detallado.html" class="box">
                                 <div class="box-move">
                                     <div>
                                         <img src="./images/MouseAsus.png" alt="MouseAsus" width="190">
@@ -251,7 +254,7 @@
                                         <div class="caja_estado">Stock</div>
                                 </div>
                             </a>
-                            <a href="" class="box">
+                            <a href="Producto-detallado.html" class="box">
                                     <div class="box-move">
                                         <div>
                                             <img src="./images/MouseAsus.png" alt="MouseAsus" width="190">
@@ -413,11 +416,70 @@
                                                                             <div class="caja_estado">Stock</div>
                                                                     </div>
                                                                 </a>
+                                                                <a href="" class="box">
+                                                                        <div class="box-move">
+                                                                            <div>
+                                                                                <img src="./images/MouseAsus.png" alt="MouseAsus" width="190">
+                                                                            </div>
+                                                                                <h2>MOUSE ASUS BOTONES ASIGNABLES </h2>
+                                                                                <div class="precios_general">
+                                                                                    Precio: $600
+                                                                                </div>
+                                                                                <div class="agregar">
+                                                                                    <form id="form100" action="compras_accion.php">
+                                                                                        <input name="cantidad" type="text" class="cant_cat" value="1">
+                                                                                        <input type="submit" class="prod_bot_comprar" value="Agregar al pedido">
+                                                                                    </form>
+                                                                                </div>
+                                                                                <div class="caja_estado">Stock</div>
+                                                                        </div>
+                                                                    </a>
+                                                                    <a href="" class="box">
+                                                                            <div class="box-move">
+                                                                                <div>
+                                                                                    <img src="./images/MouseAsus.png" alt="MouseAsus" width="190">
+                                                                                </div>
+                                                                                    <h2>MOUSE ASUS BOTONES ASIGNABLES </h2>
+                                                                                    <div class="precios_general">
+                                                                                        Precio: $600
+                                                                                    </div>
+                                                                                    <div class="agregar">
+                                                                                        <form id="form100" action="compras_accion.php">
+                                                                                            <input name="cantidad" type="text" class="cant_cat" value="1">
+                                                                                            <input type="submit" class="prod_bot_comprar" value="Agregar al pedido">
+                                                                                        </form>
+                                                                                    </div>
+                                                                                    <div class="caja_estado">Stock</div>
+                                                                            </div>
+                                                                        </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12 footer">
+                        <div class="row">
+                    <footer class="col-md-12">
+                            <section class="footer">
+                                <div class="w1000">
+                                    <ul id="social-media">
+                                        <li><a href="#" class="facebook" target="_blank"></a></li>
+                                    </ul>
+                                <div class="box-right">
+                                    <p><strong>12 e/ 59 y 60 (CP 1900) LA PLATA<br>
+                </strong><br>
+                                    Teléfono / WhatsApp: +54 15 111-1111 - Linea (0221) 111-1111 - <br>
+                ecommerce@gmail.com | Horario de atención: de Lunes a Viernes 9 a 20hs</p>
+                                </div>
+                                </div>
+                            </section>
+                    </footer>
+                    </div>
+                </div>
+                </div>
+                </div>
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
