--- a/perfil-usuario.html
+++ b/perfil-usuario.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilo.css">
+    <title>Perfil</title>
+	<link rel="stylesheet" href="css/estilo.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
+<body class="perfil-body">
         <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-dark">
                         <a class="navbar-brand" href="index.html">TecnoPc</a>
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="Contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Catálogo </a>
+                            <a class="nav-link" href="./index.html #acord">Catálogo </a>
                             </li>
                             </ul>
                             <ul class="navbar-nav">
@@ -44,18 +44,46 @@
                         </div>
                     </nav>
         </div>
-<div class="container box-login">
-    <form action="">
-                <h3>Iniciar sesion</h3>
-        <label for="">E-Mail de usuario</label>
-        <input type="email" class="form-control" required>
-        <label for="">Ingrese su contraseña</label>
-        <input type="password" class="form-control" required>
-        <input type="submit" value="Entrar" class="btn btn-success">
-        <a href="perfil-usuario.html"></a>
+<div class="form-group perfil" >
+    <div class="row">
+    <form action="" >
+        <h3>Perfil de usuario</h3>
+        <label for="">Nombre de usuario</label>
+        <input type="text" class="bt" value="Juan" disabled>
+        <label for="">Apellido</label>
+		<input type="text" class="bt" value="Gonzalez" disabled>
+		<label for="">Email</label>
+		<input type="email" value="mail" class=" bt" disabled>
+		<label for="">Contraseña</label>
+		<input type="password" value="clave" class="bt">
+		<input type="submit" value="Modificar" class=" btn-guardar">
+		<input type="submit" value="Salir" class="  btn-guardar">
     </form>
-
+    </div>
 </div>
+<div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 footer">
+                <div class="row">
+            <footer class="col-md-12">
+                    <section class="footer">
+                        <div class="w1000">
+                            <ul id="social-media">
+                                <li><a href="#" class="facebook" target="_blank"></a></li>
+                            </ul>
+                        <div class="box-right">
+                            <p><strong>12 e/ 59 y 60 (CP 1900) LA PLATA<br>
+        </strong><br>
+                            Teléfono / WhatsApp: +54 15 111-1111 - Linea (0221) 111-1111 - <br>
+        ecommerce@gmail.com | Horario de atención: de Lunes a Viernes 9 a 20hs</p>
+                        </div>
+                        </div>
+                    </section>
+            </footer>
+            </div>
+        </div>
+        </div>
+        </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
