--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Registro</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:700italic,400,700,300|Roboto+Slab:400,700,300,100" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="Contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Catálogo </a>
+                    <a class="nav-link" href="index.html">Catálogo </a>
                     </li>
                     </ul>
                     <ul class="navbar-nav">
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                     <a class="nav-link" href="registro.html">Registrarse</a>
                     </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="perfil-usuario.html">Perfil</a>
+                            </li>
                 </ul>
                 </div>
             </nav>
