Corrección de detalles y vinculación de paginas

--- a/Producto-detallado.html
+++ b/Producto-detallado.html
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                             <a class="nav-link" href="registro.html">Registrarse</a>
                             </li>
+                            <li class="nav-item">
+                                    <a class="nav-link" href="perfil-usuario.html">Perfil</a>
+                                    </li>
                         </ul>
                         </div>
                     </nav>
