--- a/registro.html
+++ b/registro.html
@@ -65,8 +65,30 @@
                     <input type="text" class="form-control" required>
                     <input type="submit" value="Registrarse" class="btn btn-success">
                 </form>
-            
             </div>
+            <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12 footer">
+                            <div class="row">
+                        <footer class="col-md-12">
+                                <section class="footer">
+                                    <div class="w1000">
+                                        <ul id="social-media">
+                                            <li><a href="#" class="facebook" target="_blank"></a></li>
+                                        </ul>
+                                    <div class="box-right">
+                                        <p><strong>12 e/ 59 y 60 (CP 1900) LA PLATA<br>
+                    </strong><br>
+                                        Teléfono / WhatsApp: +54 15 111-1111 - Linea (0221) 111-1111 - <br>
+                    ecommerce@gmail.com | Horario de atención: de Lunes a Viernes 9 a 20hs</p>
+                                    </div>
+                                    </div>
+                                </section>
+                        </footer>
+                        </div>
+                    </div>
+                    </div>
+                    </div>
 
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
