--- a/Contacto.html
+++ b/Contacto.html
@@ -21,7 +21,7 @@
                             <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">F.A.Q</a>
+                            <a class="nav-link" href="faq.html">F.A.Q</a>
                             </li>
                             <li class="nav-item">
                             <a class="nav-link" href="Contacto.html">Contacto</a>
