--- a/login-clientes.html
+++ b/login-clientes.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
+<body >
         <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-dark">
                         <a class="navbar-brand" href="index.html">TecnoPc</a>
@@ -21,13 +21,13 @@
                             <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">F.A.Q</a>
+                            <a class="nav-link" href="faq.html">F.A.Q</a>
                             </li>
                             <li class="nav-item">
                             <a class="nav-link" href="Contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Catálogo </a>
+                            <a class="nav-link" href="index.html">Catálogo </a>
                             </li>
                             </ul>
                             <ul class="navbar-nav">
