--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="Contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="./index.html #acord">Catálogo </a>
+                            <a class="nav-link" href="./index.html">Catálogo </a>
                             </li>
                             </ul>
                             <ul class="navbar-nav">
@@ -75,10 +75,10 @@
                                     </div>
                                     <div id="id17" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body">
-                                    Ofrecemos:
-                    -Componentes y ventas de pc
-                    -Venta de repuestos para consolas , tablets, pc , celular
-                    -Venta accesorios para videojuegos
+                                    Ofrecemos: <br>
+                    -Componentes y ventas de pc <br>
+                    -Venta de repuestos para consolas , tablets, pc , celular <br>
+                    -Venta accesorios para videojuegos <br>
                     -Accesorios varios                  </div>
                                     </div>
                                 </div>
