--- a/Contacto.html
+++ b/Contacto.html
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="Contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Catálogo </a>
+                            <a class="nav-link" href="index.html">Catálogo </a>
                             </li>
                             </ul>
                             <ul class="navbar-nav">
