--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/estilo.css">
     <title>TecnoPc</title>
 </head>
-<body>
+<body class="perfil-body">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="index.html">TecnoPc</a>
